fix layout issues in all browsers

--- a/src/components/sandbox/particles/ParticlesPage.scss
+++ b/src/components/sandbox/particles/ParticlesPage.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     flex-shrink: 0;
+    flex-wrap: wrap;
     background-color: $home-page-banner-color;
     color: $home-page-banner-text-color;
   }
@@ -29,13 +30,14 @@
   }
 
   .particles-control-select {
-    margin-left: 20px;
+    margin: 10px 15px;
   }
 
   .particles-canvas-wrapper {
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
+    height: 0; // prevent canvas from stretching wrapper
   }
 
   .particles-canvas {
